legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr15360-1.c-4.8.2-2.out.txt
pr15360-1.c:17:5: error: non-static declaration of ‘c’ follows static declaration
 int c;  
     ^
pr15360-1.c:16:12: note: previous declaration of ‘c’ was here
 static int c;  
            ^
pr15360-1.c:20:5: error: non-static declaration of ‘d’ follows static declaration
 int d = 1;  
     ^
pr15360-1.c:19:12: note: previous declaration of ‘d’ was here
 static int d;  
            ^
pr15360-1.c: In function ‘foo’:
pr15360-1.c:22:30: error: ‘e’ has both ‘extern’ and initializer
 void foo (void) { extern int e = 1; }  
                              ^
